--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        hej
+    <header class="header">
+        <div class="logo">Bästa<3</div>
+        <nav class="nav">
+            <div class="nav__item">Home</div>
+            <div class="nav__item">About</div>
+            <div class="nav__item">Contact</div>
+        </nav>
     </header>
     <main>
         då
