--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         då
     </main>
     <footer>
-        !
+        <p class="footer-text">
+            COPYRIGHT&#169; DESIGNED BY DAVID, ELLA, JENNY, PRICKAR 2023
+        </p>
     </footer>
 </body>
 </html>
