--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         </div>
         <div>
             <h5>Best blue colors </h5>
-        <ul>
-            <li class="cyan">Cyan</li>
-            <li class="navy">Navy</li>
-            <li class="aqua">Aqua</li>
-            <li class="midnight">Midnight blue</li>
-        </ul>
-    </div>
+            <ul>
+                <li class="cyan">Cyan</li>
+                <li class="navy">Navy</li>
+                <li class="aqua">Aqua</li>
+                <li class="midnight">Midnight blue</li>
+            </ul>
+            <a href="https://miro.medium.com/v2/resize:fit:1200/format:webp/0*tmfbLDU_hIeg0B3B.jpg">då</a>
+        </div>
     </main>
     <footer>
         !
