Add link to main.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="nav__item">Contact</div>
         </nav>
     </header>
-    <main>
-        då
+    <main> 
+      <a href="https://miro.medium.com/v2/resize:fit:1200/format:webp/0*tmfbLDU_hIeg0B3B.jpg">då</a>
     </main>
     <footer>
         !
