--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <img class="gallery__big" src="./assets/images/blue-ocean.jpg" alt="">
             <img src="./assets/images/blue-sea.jpg" alt="">
         </div>
+        <div>
+            <h5>Best blue colors </h5>
+            <ul>
+                <li class="Cyan">Cyan</li>
+                <li class="navy">Navy</li>
+                <li class="aqua">Aqua</li>
+                <li class="midnight">Midnight blue</li>
+            </ul>
+        </div>
     </main>
     <footer>
         !
