changes class name

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <div>
             <h5>Best blue colors </h5>
-            <ul>
-                <li class="Cyan">Cyan</li>
-                <li class="navy">Navy</li>
-                <li class="aqua">Aqua</li>
-                <li class="midnight">Midnight blue</li>
-            </ul>
-        </div>
+        <ul>
+            <li class="cyan">Cyan</li>
+            <li class="navy">Navy</li>
+            <li class="aqua">Aqua</li>
+            <li class="midnight">Midnight blue</li>
+        </ul>
+    </div>
     </main>
     <footer>
         !
