add image gallery

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         </nav>
     </header>
     <main>
-        då
+        <div class="gallery">
+            <img class="gallery__big" src="./assets/images/blue-glitter.jpg" alt="">
+            <img src="./assets/images/blue-berries.jpg" alt="">
+            <img class="gallery__big" src="./assets/images/blue-ocean.jpg" alt="">
+            <img src="./assets/images/blue-sea.jpg" alt="">
+        </div>
     </main>
     <footer>
         !
